# mcp-ros2-logs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
src/mcp_ros2_logs/: __main__.py  anomaly.py  bag.py  compare.py  config.py  correlate.py  parser.py  query.py  resolver.py  server.py  store.py  tail.py  timeline.py
tests/: test_anomaly.py  test_bag.py  test_compare.py  test_correlate.py  test_node_summary.py  test_pagination.py  test_parser.py  test_query.py  test_resolver.py  test_resources.py  test_store.py  test_tail.py  test_timeline.py  test_transport.py
